[signin] Reset DiceTabHelper to initial state when reusing signin tab

Bug: 791948
Change-Id: Ie8f9c43ace98082e86d1bfbe01bc3ffe58a01fd6