chrome/browser/ui/signin_view_controller.cc
@@ -154,6 +154,7 @@ void SigninViewController::ShowDiceSigninTab(
   DCHECK_EQ(signin_url, active_contents->GetVisibleURL());
   DiceTabHelper::CreateForWebContents(active_contents);
   DiceTabHelper* tab_helper = DiceTabHelper::FromWebContents(active_contents);
+  tab_helper->Reset();  // Necessary when re-using an existing tab.
   tab_helper->SetSigninAccessPoint(access_point);
   tab_helper->SetSigninReason(signin_reason);
 
